// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: after_fetching_data 1`] = `
<Memo(LifetimeInformationRenderer)
  branchAndPullRequestLifeTimeInDays="45"
  canAdmin={true}
  loading={false}
/>
`;

exports[`should render correctly: initial_state 1`] = `
<Memo(LifetimeInformationRenderer)
  canAdmin={true}
  loading={true}
/>
`;
